--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,8 @@ jobs:
       - checkout
       - setup_remote_docker:
           version: 20.10.7
+          docker_layer_caching: true
+
       - run:
           name: "Executing test cases"
           command: |
