--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,15 +11,18 @@ jobs:
       - setup_remote_docker:
           version: 20.10.7
           docker_layer_caching: true
-
+      - run:
+          name: "Building docker image"
+          command: |
+            docker build --file Dockerfile.testing -t razor-test .
       - run:
           name: "Executing test cases"
           command: |
-            ./test.sh
+            docker run --rm -v $(pwd):/test --name go  razor-test go-acc ./... --ignore razor/accounts/mocks --ignore razor/cmd/mocks --ignore razor/utils/mocks --ignore pkg --output /test/coverage.txt
       - run:
           name: "Publish Coverage to Coveralls.io"
           command: |
-            docker run --rm -v $(pwd):/test --name go -e COVERALLS_TOKEN=$COVERALLS_TOKEN razor-test goveralls -coverprofile=coverage.txt -service semaphore -repotoken $COVERALLS_TOKEN
+            docker run --rm -v $(pwd):/test --name go -e COVERALLS_TOKEN=$COVERALLS_TOKEN razor-test goveralls -coverprofile=/test/coverage.txt -service semaphore -repotoken $COVERALLS_TOKEN
       - persist_to_workspace:
           root: .
           paths:
