--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,13 +17,12 @@ jobs:
           name: "Executing test cases"
           command: |
             docker run --rm -v $(pwd):/test --name go  razor-test go-acc ./... --ignore razor/accounts/mocks --ignore razor/cmd/mocks --ignore razor/utils/mocks --ignore pkg --output /test/coverage.txt
-            ls
       - run:
           name: "Removing unnecessary files from coveralls report"
           command: |
-            ls 
+            docker run --rm -v $(pwd):/test --name go  razor-test sed -i '' '/razor\/accounts\/accountUtils.go/d;/razor\/cmd\/root.go/d;/razor\/cmd\/struct-utils.go/d;/razor\/path\/mocks*/d;/razor\/utils\/struct-utils.go/d' /test/coverage.txt
             docker run --rm -v $(pwd):/test --name go  razor-test cat /test/coverage.txt
-            sed -i '' '/razor\/accounts\/accountUtils.go/d;/razor\/cmd\/root.go/d;/razor\/cmd\/struct-utils.go/d;/razor\/path\/mocks*/d;/razor\/utils\/struct-utils.go/d' coverage.txt 
+             
       - run:
           name: "Publish Coverage to Coveralls.io"
           command: |
