--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,7 @@ jobs:
       - run:
           name: "Removing unnecessary files from coveralls report"
           command: |
+            docker run --rm -v $(pwd):/test --name go  razor-test cat /test/coverage.txt
             docker run --rm -v $(pwd):/test --name go  razor-test sed -i '' '/razor\/accounts\/accountUtils.go/d;/razor\/cmd\/root.go/d;/razor\/cmd\/struct-utils.go/d;/razor\/path\/mocks*/d;/razor\/utils\/struct-utils.go/d' /test/coverage.txt
             docker run --rm -v $(pwd):/test --name go  razor-test cat /test/coverage.txt
              
