--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,7 @@ jobs:
       - run:
           name: "Publish Coverage to Coveralls.io"
           command: |
+            cat coverage.txt
             docker run --rm -v $(pwd)/coverage.txt:/report/coverage.txt --name go -e COVERALLS_TOKEN=$COVERALLS_TOKEN razor-test cat /report/coverage.txt
           #docker run --rm -v $(pwd)/coverage.txt:/report/coverage.txt --name go -e COVERALLS_TOKEN=$COVERALLS_TOKEN razor-test goveralls -coverprofile=/report/coverage.txt -service semaphore -repotoken $COVERALLS_TOKEN
       - persist_to_workspace:
