--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,8 +10,10 @@ jobs:
           version: 20.10.7
           docker_layer_caching: true
       - run:
-          name: "Install goveralls lib"
-          command: go get github.com/mattn/goveralls
+          name: "Install"
+          command: |
+            go get github.com/mattn/goveralls
+            go get -u github.com/dave/courtney
       - run:
           name: "Building docker image"
           command: |
@@ -28,7 +30,8 @@ jobs:
       - run:
           name: "Publish Coverage to Coveralls.io"
           command: |
-            goveralls -coverprofile=coverage.txt -service semaphore -repotoken $COVERALLS_TOKEN
+            courtney
+            goveralls -coverprofile=coverage.out -service semaphore -repotoken $COVERALLS_TOKEN
           
       - persist_to_workspace:
           root: .
