Update compose for metric exposer

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,10 @@ services:
     #platform: linux/x86_64 #Uncomment for silicon based MAC
     container_name: razor-go
     image: razornetwork/razor-go
+    entrypoint: /bin/bash
     build: .
     tty: true
+    ports:
+      - 2112:2112
     volumes:
       - $HOME/.razor:/root/.razor
