--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,10 @@ jobs:
           version: 20.10.7
           docker_layer_caching: true
       - run:
+          name: "linting"
+          command: |
+            docker run --rm -v $(pwd):/app -w /app golangci/golangci-lint:v1.44.2 golangci-lint run -v
+      - run:
           name: "Building docker image"
           command: |
             docker build --file Dockerfile.test -t razor-test .
