--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,14 @@ jobs:
           command: |
             docker build --file Dockerfile.test -t razor-test .
       - run:
+          name: "go-fmt"
+          command: |
+            docker run --rm -v $(pwd):/test --name go  razor-test gofmt
+      - run:
+          name: "go-lint"
+          command: |
+            docker run --rm -v $(pwd):/test --name go  razor-test golangci-lint run -v
+      - run:
           name: "Executing test cases"
           command: |
             docker run --rm -v $(pwd):/test --name go  razor-test go-acc ./... --ignore razor/accounts/mocks --ignore razor/cmd/mocks --ignore razor/utils/mocks --ignore pkg --ignore razor/path/mocks --output /test/coverage.txt
