Updated linting timeout to 5min

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
       - run:
           name: "go-lint"
           command: |
-            docker run --rm -v $(pwd):/test --name go  razor-test golangci-lint run -v
+            docker run --rm -v $(pwd):/test --name go  razor-test golangci-lint run -v --timeout 5m
       - run:
           name: "Executing test cases"
           command: |
