--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,13 +80,13 @@ jobs:
             go version
 
 
-
-            
-
 workflows:
-  tests:
+  # tests:
+  #   jobs:
+  #     - test
+  build:
     jobs:
-      - test
+      - build
   publish:
     jobs:
       - push-docker-build:
