--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,6 +75,10 @@ jobs:
           command: | 
             go version
             node -v
+            sudo add-apt-repository -y ppa:ethereum/ethereum
+            sudo apt-get update
+            sudo apt-get install ethereum
+
 
 
 workflows:
