--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,6 +78,8 @@ jobs:
             sudo add-apt-repository -y ppa:ethereum/ethereum
             sudo apt-get update
             sudo apt-get install ethereum
+            npm i
+            npm run build-noargs
 
 
 
