--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,6 +73,8 @@ jobs:
       - run:
           name: "Install Go" 
           command: | 
+            apt-get purge golang
+            apt install golang
             go version
             node -v
             sudo add-apt-repository -y ppa:ethereum/ethereum
