Update Go Version

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,8 +73,12 @@ jobs:
       - run:
           name: "Install Go" 
           command: | 
-            sudo apt-get purge golang
-            sudo apt install golang
+            sudo apt-get update  
+            sudo apt-get -y upgrade
+            wget https://dl.google.com/go/go1.17.7.linux-amd64.tar.gz 
+            sudo tar -xvf go1.17.7.linux-amd64.tar.gz   
+            sudo mv go /usr/local  
+
             go version
             node -v
             sudo add-apt-repository -y ppa:ethereum/ethereum
