--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,19 +71,27 @@ jobs:
     steps:
       - checkout
       - run:
-          name: "Install Go" 
+          name: "Installing Go" 
           command: | 
             sudo apt-get update  
             sudo apt-get -y upgrade
             wget https://dl.google.com/go/go1.17.7.linux-amd64.tar.gz 
             sudo tar -xvf go1.17.7.linux-amd64.tar.gz   
             sudo mv go /usr/local  
-
+      - run:
+          name: "Check Version" 
+          command: | 
             go version
             node -v
+      - run:
+          name: "Installing abigen" 
+          command: |             
             sudo add-apt-repository -y ppa:ethereum/ethereum
-            sudo apt-get update
-            sudo apt-get install ethereum
+            sudo apt-get update -y
+            sudo apt-get install ethereum -y
+      - run:
+          name: "Start building" 
+          command: |         
             npm i
             npm run build-noargs
 
