--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -98,9 +98,10 @@ jobs:
           name: "Creating Zip"
           command: |
             VERSION=$(git describe --tags --abbrev=0)
+            ls
             cd build/bin
             tar -czvf razor_go-${VERSION}.tar.gz razor
-            mkdir ./artifacts
+            ls
             mv razor_go-${VERSION}.tar.gz ./artifacts
       - persist_to_workspace:
           root: .
@@ -119,7 +120,7 @@ jobs:
           command: | 
             VERSION=$(git describe --tags --abbrev=0)
             go get -u github.com/tcnksm/ghr
-            ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} ${VERSION} ./artifacts/*
+            ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} ${VERSION} razor_go-${VERSION}.tar.gz
 
 
 workflows:
