--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -109,7 +109,7 @@ jobs:
 
   publish-github-release:
     docker:
-      - image: circleci/golang:1.10
+      - image: cimg/go:1.17
     steps:
       - attach_workspace:
           at: .
