Check for arm build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -172,7 +172,7 @@ workflows:
       - build-arm
       - publish-github-release:
           requires:
-            - build
+            - build-arm
   publish:
     jobs:
       - push-docker-build:
