--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -159,8 +159,8 @@ jobs:
           name: "Publish Release on GitHub"
           command: | 
             VERSION=$(git describe --tags --abbrev=0)
-            cp razor_go.linux-amd64.tar.gz razor_go.${VERSION}.linux-amd64.tar.gz
-            cp razor_go.linux-arm64.tar.gz razor_go.${VERSION}.linux-arm64.tar.gz
+            mv razor_go.linux-amd64.tar.gz razor_go.${VERSION}.linux-amd64.tar.gz
+            mv razor_go.linux-arm64.tar.gz razor_go.${VERSION}.linux-arm64.tar.gz
             mkdir artifacts
             mv razor_go.${VERSION}.linux-amd64.tar.gz artifacts/
             mv razor_go.${VERSION}.linux-arm64.tar.gz artifacts/ 
