--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -162,9 +162,8 @@ jobs:
             VERSION=$(git describe --tags --abbrev=0)
             mkdir artifacts
             mv razor_go.linux-amd64.tar.gz razor_go.${VERSION}.linux-amd64.tar.gz && mv razor_go.linux-arm64.tar.gz razor_go.${VERSION}.linux-arm64.tar.gz
-            mv razor_go.${VERSION}.linux-amd64.tar.gz artifacts/ 
+            mv -t artifacts/  razor_go.${VERSION}.linux-amd64.tar.gz razor_go.${VERSION}.linux-arm64.tar.gz 
             echo "Pushing artifacts echo  razor_go.${VERSION}.linux-amd64.tar.gz and razor_go.${VERSION}.linux-arm64.tar.gz"
-            ls
             ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} ${VERSION} ./artifacts/*
 
 
